try to fix the var imports